--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "restaurant-roulette",
   "version": "0.1.0",
+  "scripts": {
+    "start": "node server/index.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+  },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
