--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "start": "node server/index.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "(cd ./server && yarn)  && (cd ./client && yarn install --production=false && yarn build)"
   },
   "husky": {
     "hooks": {
